--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Aventuras en Juego — Taller de Rol (4 encuentros)</title>
+  <title>Aventuras en Juego 🎲 Taller lúdico (4 encuentros de 2 horas)</title>
   <meta name="description" content="Aventuras en Juego: taller de juegos narrativos y de rol para infancias (7+). Un taller: 4 encuentros de 2 horas. Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones." />
   
   <style>
