Agregado del botón para descargar PDF

--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
         <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:18px;font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;">
           <a class="btn primary" href="#taller">Ver el taller</a>
           <a class="btn" href="#donde">Instituciones</a>
+          <a class="btn" href="Aventuras-en-Juego.pdf">Descargar PDF</a>
         </div>
 
         <div class="note" style="margin-top:16px">
