--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
       justify-content:space-between;
       gap:14px;
       padding:18px;
+      z-index: 2;
     }
 
     .banner::before{
@@ -188,6 +189,7 @@
         radial-gradient(900px 500px at 20% 0%, rgba(178,42,47,.12), transparent 60%),
         radial-gradient(700px 500px at 80% 20%, rgba(0,0,0,.12), transparent 60%);
       pointer-events:none;
+      z-index: 1;
     }
 
     /* Dragón silueta (usar tu archivo) */
@@ -196,11 +198,12 @@
       right:-22px;
       top:-20px;
       width:min(360px, 56%);
-      opacity:.92;
+      opacity:.35;
       transform: rotate(6deg);
       filter: drop-shadow(0 16px 24px rgba(0,0,0,.25));
       pointer-events:none;
       user-select:none;
+      z-index: 0;
     }
 
     .banner h3{
@@ -209,6 +212,11 @@
       font-size:18px;
       font-weight:900;
       letter-spacing:-.02em;
+    }
+
+    .banner > *{
+      position: relative;
+      z-index: 2;
     }
 
     .kpis{
@@ -412,7 +420,7 @@
 
       <!-- Banner visual: pergamino + dragón silueta -->
       <aside class="card banner" aria-label="Resumen del taller">
-        <img class="dragon" src="dragon-rojo.png" alt="" />
+        <img class="dragon" src="dragon-rojo.png" alt="Ilustración de un dragón rojo" />
 
         <div>
           <h3>Resumen del ciclo</h3>
