--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
         </div>
 
         <div class="note" style="margin-top:16px">
-          <b>Foco único:</b> ofrecemos un solo taller, bien diseñado y replicable:
-          <b>taller "Aventuras en Juego" de 4 encuentros de 2 horas</b>.
+          <b>Foco actual:</b> ofrecemos un taller, bien diseñado y replicable:
+          <b>taller "Aventuras en Juego" de 4 encuentros de 2 horas</b>. Materiales incluidos.
         </div>
       </div>
 
