cambios en edades, grupos y demás.
también agregué emojis :P

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aventuras en Juego 🎲 Taller lúdico (4 encuentros de 2 horas)</title>
-  <meta name="description" content="Aventuras en Juego: taller de juegos narrativos y de rol para infancias (7+). Un taller: 4 encuentros de 2 horas. Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones." />
+  <meta name="description" content="Aventuras en Juego: taller de juegos narrativos y de rol para infancias (8 a 16 años). Un taller: 4 encuentros de 2 horas. Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones." />
   
   <style>
     :root{
@@ -369,7 +369,7 @@
         <div class="seal">🐉</div>
         <div>
           <div class="title">Aventuras en Juego</div>
-          <div class="subtitle">Taller de juegos narrativos y de rol (7+) · 4×2h</div>
+          <div class="subtitle">Taller de juegos narrativos y de rol (8 a 16 años) · 4×2h</div>
         </div>
       </a>
 
@@ -425,10 +425,11 @@
         <div>
           <h3>Resumen del ciclo</h3>
           <div class="tags">
-            <span class="tag">Creación de personajes</span>
-            <span class="tag">Improvisación</span>
-            <span class="tag">Escritura y dibujo</span>
-            <span class="tag">Historia + azar</span>
+            <span class="tag">Creación de personajes 👤</span>
+            <span class="tag">Improvisación 💡</span>
+            <span class="tag">Escritura y dibujo 🖍</span>
+            <span class="tag">Historia + azar 🎲</span>
+            <span class="tag">Grupos por edades similares</span>
           </div>
         </div>
 
@@ -442,13 +443,13 @@
             <div class="lbl">por semana</div>
           </div>
           <div class="kpi">
-            <div class="num">7+</div>
+            <div class="num">8 a 16 años</div>
             <div class="lbl">edad sugerida</div>
           </div>
         </div>
 
         <div class="note">
-          Hoy los espacios de juego presencial compartido se ven cada vez más reducidos.
+          Hoy los espacios de juego <b>presencial</b> compartido se ven cada vez más reducidos.
           Este taller busca abrir y sostener un lugar donde el juego, la imaginación y los vínculos
           ocupen un lugar central.
         </div>
@@ -471,7 +472,8 @@
             <li>Juegos narrativos y de rol: interpretar, decidir, cooperar.</li>
             <li>Dinámicas de improvisación y creatividad.</li>
             <li>Escritura y dibujo como soporte de la historia.</li>
-            <li>Construcción colectiva con “ingrediente de azar” (dados).</li>
+            <li>Construcción colectiva con ingrediente de azar (dados).</li>
+            <li>Dinámicas y juegos acorde a las edades del grupo.</li>
           </ul>
         </div>
 
@@ -554,16 +556,16 @@
 
       <details>
         <summary>¿Qué edades?</summary>
-        <p>Desde 7 años en adelante. Se ajusta complejidad, ritmo y recursos según el grupo.</p>
+        <p>Desde 8 hasta 16 años. Se ajusta complejidad, ritmo y recursos según el grupo.</p>
       </details>
 
       <details>
         <summary>¿Cuántos participantes?</summary>
-        <p>Grupos reducidos para sostener calidad (sugerencia: 3 a 5 participantes). Si la institución requiere más cupos, podemos hacer una división en grupos con facilitación adicional o ampliando el horario.</p>
+        <p>Grupos reducidos para sostener calidad (sugerencia: 3 a 6 participantes). Si la institución requiere más cupos, podemos hacer una división en grupos con facilitación adicional o ampliando el horario.</p>
       </details>
 
       <details>
-        <summary>¿Qué necesita la institución?</summary>
+        <summary>¿Qué se necesita para organizar un taller?</summary>
         <p>Un espacio relativamente tranquilo, mesa/sillas o almohadones, y sostener el ciclo completo de 4 encuentros. Antes de empezar, se alinean objetivos y cuidados.</p>
       </details>
     </section>
