--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
             <li>Cooperación real (nadie “gana solo”).</li>
             <li>Herramientas para negociar y resolver conflictos.</li>
             <li>Confianza grupal (por continuidad del ciclo).</li>
+            <li>Personajes para seguir creando historias más allá del taller.</li>
             <li>Un recuerdo: historia compartida y final épico.</li>
           </ul>
         </div>
