--- a/index.html
+++ b/index.html
@@ -653,13 +653,13 @@
           </div>
 
           <div style="margin-top:14px">
-            <button class="btn" id="btnCopiar" type="button">Copiar texto corto</button>
+            <button class="btn" id="btnCopiar" type="button">Copiar descripción cortita del proyecto para compartir</button>
           </div>
 
           <div style="margin-top:14px;color: rgba(0,0,0,.76);font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial; line-height:1.55">
-            <b>Texto corto:</b><br/>
+            <b>¡Te dejamos una explicación breve, por si querés compartida con colegas, familiares o amistades!</b><br/>
             “Taller Aventuras en Juego: 4 encuentros de 2 horas. Un espacio seguro y cuidado para crear historias compartidas a través de juegos narrativos y de rol.
-            Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones vinculadas a infancias.”
+            Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones vinculadas a infancias. Edades de 8 a 16 años.”
           </div>
         </div>
       </div>
