actualización texto breve para compartir

--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
           <div style="margin-top:14px;color: rgba(0,0,0,.76);font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial; line-height:1.55">
             <b>¡Te dejamos una explicación breve, por si querés compartida con colegas, familiares o amistades!</b><br/>
             “Taller Aventuras en Juego: 4 encuentros de 2 horas. Un espacio seguro y cuidado para crear historias compartidas a través de juegos narrativos y de rol.
-            Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones vinculadas a infancias. Edades de 8 a 16 años.”
+            Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones vinculadas a infancias. Edades de 8 a 16 años. Grupos reducidos por edades similares.”
           </div>
         </div>
       </div>
@@ -734,7 +734,7 @@ ${mensaje ? "\nContexto/objetivo:\n" + mensaje : ""}
 
     document.getElementById('btnCopiar').addEventListener('click', async () => {
       const copyText =
-        "Taller Aventuras en Juego: 4 encuentros de 2 horas. Un espacio seguro y cuidado para crear historias compartidas a través de juegos narrativos y de rol. Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones vinculadas a infancias.";
+        "Taller Aventuras en Juego: 4 encuentros de 2 horas. Un espacio seguro y cuidado para crear historias compartidas a través de juegos narrativos y de rol. Para escuelas, bibliotecas, librerías, ludotecas, ONGs y otras instituciones vinculadas a infancias. Edades de 8 a 16 años. Grupos reducidos por edades similares.";
       try{
         await navigator.clipboard.writeText(copyText);
         toast("Copiado al portapapeles.");
